--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -19,6 +19,20 @@
         display: flex;
         align-items: center;
       }
+      .section.post .card-title {
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 1;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+      .section.post .card-text {
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 3; /* 顯示三行 */
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
     </style>
   </head>
   <body>
@@ -32,6 +46,21 @@
         <li>Google的ID為： <%= user.googleID %></li>
         <li>時間為：<%= user.date %></li>
       </ul>
+    </section>
+    <section class="posts">
+      <div class="row">
+        <% for(let i = 0;i < posts.length; i++){ %>
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
+          <div class="card" style="height: 100%">
+            <div class="card-body">
+              <h5 class="card-title"><%= posts[i].title %></h5>
+              <p class="card-text"><%= posts[i].content %></p>
+              <a href="#" class="btn btn-primary"><%= posts[i].date %></a>
+            </div>
+          </div>
+        </div>
+        <% } %>
+      </div>
     </section>
   </body>
 </html>
