--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -19,14 +19,14 @@
         display: flex;
         align-items: center;
       }
-      .section.post .card-title {
+      .section.posts .card-title {
         display: -webkit-box;
         -webkit-box-orient: vertical;
         -webkit-line-clamp: 1;
         overflow: hidden;
         text-overflow: ellipsis;
       }
-      .section.post .card-text {
+      .section.posts .card-text {
         display: -webkit-box;
         -webkit-box-orient: vertical;
         -webkit-line-clamp: 3; /* 顯示三行 */
