--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,8 @@
       <div class="container-fluid py-5">
         <h1 class="display-5 fw-bold">Google登入與本地登入系統</h1>
         <p class="col-md-8 fs-4">
-          使用EJS、MongoDB、Passport.js、Authentication、OAuth(Google Login
+          使用Node.js
+          EJS、Express、MongoDB、Passport.js、Authentication、OAuth(Google Login
           Setup) 和其他範例。
         </p>
         <button class="btn btn-primary btn-lg" type="button">
